# open-posttraining-system

./: .gitignore  README.md  logger.py  pyproject.toml  requirements.txt  test.py
base_model/: qwen.ipynb  qwen.py
downloading the base-model/: download_model.py
generating_text_with_pre-trained_llm/: main.ipynb
logger/: __init__.py
test/: test.py
